# Stopwatchd

./: .gitignore  BUILD.md  CHANGELOG.md  Cargo.toml  README.md  TESTING.md  TODO.md
res/conf/: swd.toml
res/init/systemd/: stopwatchd.service
scripts/: _common  build  mk-systemd-service  package  pkg-debian  pkg-systemd
src/lib/: communication.rs  error.rs  identifiers.rs  intention.rs  logging.rs  mod.rs  pidfile.rs  runtime.rs  traits.rs  util.rs
src/lib/communication/: client.rs  client_message.rs  delete.rs  details.rs  info.rs  info_list.rs  intention.rs  lap.rs  mod.rs  pause.rs  play.rs  reply.rs  reply_specifics.rs  request.rs  request_specifics.rs  server.rs  server_message.rs  start.rs  stop.rs
src/lib/fmt/: mod.rs
src/lib/logging/: cli.rs  mod.rs
src/lib/models/: lap.rs  mod.rs  stopwatch.rs
tests/: swd.toml
