[package]
name = "stopwatchd"
version = "0.1.0"
edition = "2021"
authors = ["RenoirTan"]
description = "Stopwatch daemon in the terminal."
readme = "README.md"
license = ""

[package.metadata.deb]
name = "stopwatchd"
maintainer = "RenoirTan"
depends = "systemd"
extended-description-file = "README.md"
revision = "1"
section = "utility"
priority = "optional"

[package.metadata.deb.systemd-units]
unit-scripts = "out"
unit-name = "stopwatchd"
enable = false
start = false
restart-after-upgrade = false
stop-on-upgrade = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "stopwatchd"
path = "src/lib/mod.rs"
test = true
crate-type = ["lib"]

[[bin]]
name = "swd"
path = "src/bin/swd/mod.rs"

[[bin]]
name = "swctl"
path = "src/bin/swctl/mod.rs"

[features]
default = ["swd-config"]
swd-config = ["dep:toml"]

[dependencies]
chrono = "0.4.23"
ciborium = "0.2.0"
clap = { version = "4.1.4", features = ["derive"] }
futures = "0.3.26"
log = "0.4.17"
serde = { version = "1.0.152", features = ["derive"] }
signal-hook = "0.3.14"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
syslog = "6.0.1"
tabled = { version = "0.10.0", features = ["color"] }
toml = { version = "0.7.3", optional = true }
uuid = { version = "1.3.0", features = ["v4", "serde"] }

[dependencies.tokio]
version = "1.25.0"
features = ["rt", "macros", "rt-multi-thread", "net", "sync", "io-util"]

[profile.release]
opt-level = 2
strip = "debuginfo"
